# command-not-found

./: README.md  meson.build
po/: POTFILES  command_not_found.pot  meson.build  ru_RU.po
src/: command-not-found.c
src/shell/bash/: command-not-found-autoload.sh  command-not-found.sh
src/shell/fish/: command-not-found.fish
src/shell/zsh/: command-not-found.zsh
